--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf8">	
+	<meta charset="utf8">
 	<title>Holly Adams</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -23,10 +23,14 @@
 			<span class="title"><b>Holly Adams</b></span>
 		</div>
 	</div>
-	
+
 	<div class="block_text">
 		<h3 id="bio">Bio</h3>
-		<p>This is some content about Holly and how amazing she is. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Holly's passion for fitness lifestyle came from training and performing as a professional dancer in the UK and around the world.</p>
+		<p>Holly was born in Worcestershire and started
+training as a dancer from the early age of 4. She training in all
+styles of dance, including ballet where she enrolled at the Royal
+Ballet Associates for four years. Holly competed in dace competitions across the UK and won the 'All England Finas' proving to be the best in her age group. When she was 18, Holly moved to London to continue her dance training at a professional level graduating with a National Diploma in Dance and Musical Theater. Sicner graduating, Holly has toured the UK with the hit show "Puttin' on the Ritz" alongside artists such as Pixie Lott. Holly also performed as a showgirl in the "Thursford Christmass Spectacular" and in world famous venues in Monte Carlo.</p>
 	</div>
 	<div class="big_img3"></div>
 	<div class="block_text">
