--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
 		<h3 id="bio">Bio</h3>
 		<p>Holly's passion for fitness lifestyle came from training and performing as a professional dancer in the UK and around the world.</p>
 		<p>Holly was born in Worcestershire and started
-training as a dancer from the early age of 4. She training in all
-styles of dance, including ballet where she enrolled at the Royal
-Ballet Associates for four years. Holly competed in dace competitions across the UK and won the 'All England Finas' proving to be the best in her age group. When she was 18, Holly moved to London to continue her dance training at a professional level graduating with a National Diploma in Dance and Musical Theater. Sicner graduating, Holly has toured the UK with the hit show "Puttin' on the Ritz" alongside artists such as Pixie Lott. Holly also performed as a showgirl in the "Thursford Christmass Spectacular" and in world famous venues in Monte Carlo.</p>
+		training as a dancer from the early age of 4. She training in all
+		styles of dance, including ballet where she enrolled at the Royal
+		Ballet Associates for four years. Holly competed in dace competitions across the UK and won the 'All England Finas' proving to be the best in her age group. When she was 18, Holly moved to London to continue her dance training at a professional level graduating with a National Diploma in Dance and Musical Theater. Sicner graduating, Holly has toured the UK with the hit show "Puttin' on the Ritz" alongside artists such as Pixie Lott. Holly also performed as a showgirl in the "Thursford Christmass Spectacular" and in world famous venues in Monte Carlo.</p>
+		<p>Holly's passion for fitness started alongside her dancing career, as it was a major requirement for the work she was doing. Holly believes that leading a healthy lifestyle can make a very positive impact on the way you feel on the inside and out, and that is why Holly has created her own brand to share her knowledge in the hope to help and inspire as many people as she can to lead a healthier lifestyle. </p>
 	</div>
 	<div class="big_img3"></div>
 	<div class="block_text">
 		<h3 id="programs">Programs</h3>
-		<p>Here is some quick info about Holly's programs. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Holly became pregnant in 2018 and wanted to continue her fitness journey throughout her pregnancy in a safe way. Many woment are left in the dark when it comes to working out during pregnancy and so Holly has put together a programme of all the exercises and training styles that have helped her progress through the course of her pregnancy. In the programme you will find simple and easy to follow workouts that Holly used, nd photos of all the exercises, sets and reps needed to complete either at home or in the gym.</p>
 	</div>
 	<div class="big_img2">
 		<div class="caption2">
