index & css updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/responsive.css">
-	<link href="https://fonts.googleapis.com/css?family=Pacifico|Poiret+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico|Poiret+One|Montserrat" rel="stylesheet">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
 	</nav>
 	<div class="big_img1">
 		<div class="caption1">
-			<span class="title"><b>Holly Adams</b></span>
+			<span class="title"><b>Holly Jane Adams</b></span>
 		</div>
 	</div>
 
